Fix gap bottoni nella homepage

--- a/src/simpleViews (components)/Home.module.css
+++ b/src/simpleViews (components)/Home.module.css
@@ -121,6 +121,7 @@
     justify-content: center;
     align-content: center;
     padding: 1.5rem;
+    gap: 1rem;
 }
 
 /* --- AUTH STRIP --- */
